--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client_id=7911626909496ce49e54
+github.client_secret  =def0634f50f8409c8c5b865a990d397e1b52ed33
+github.redirect_uri = http://localhost:8887/callback
