--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=8887
 github.client_id=7911626909496ce49e54
 github.client_secret  =def0634f50f8409c8c5b865a990d397e1b52ed33
 github.redirect_uri = http://localhost:8887/callback
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/community
+spring.datasource.username=root
+spring.datasource.password=ld27529119
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
